Update index.html with new titles and styles

--- a/index.html
+++ b/index.html
@@ -3,72 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ভোট বাজার - ইমান বিক্রি কেন্দ্র</title>
+    <title>ভোট বাজার - স্পেশাল অফার</title>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f0f2f5; color: #333; text-align: center; margin: 0; padding: 20px; }
-        .container { max-width: 600px; margin: auto; background: white; padding: 20px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
-        h1 { color: #d9534f; }
-        .tagline { font-style: italic; color: #555; }
-        .price-card { border: 1px solid #ddd; padding: 15px; margin: 10px 0; border-radius: 10px; transition: 0.3s; cursor: pointer; }
-        .price-card:hover { background-color: #ffe5e5; transform: scale(1.02); }
-        .price { font-weight: bold; color: #28a745; font-size: 1.2rem; }
-        .stats { background: #333; color: white; padding: 15px; border-radius: 10px; margin-top: 20px; }
-        button { background: #d9534f; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-weight: bold; }
-        footer { margin-top: 30px; font-size: 0.8rem; color: #888; }
+        body { font-family: 'Hind Siliguri', sans-serif; background-color: #0d1117; color: #c9d1d9; text-align: center; padding: 20px; }
+        .container { max-width: 600px; margin: auto; background: #161b22; padding: 25px; border-radius: 20px; border: 2px solid #30363d; box-shadow: 0 0 20px rgba(255,0,0,0.2); }
+        h1 { color: #f85149; text-shadow: 2px 2px #000; }
+        .tagline { color: #8b949e; font-style: italic; }
+        .secret-card { background: #21262d; border: 1px dashed #f85149; padding: 15px; margin: 15px 0; border-radius: 12px; transition: 0.4s; cursor: crosshair; }
+        .secret-card:hover { background: #b62323; color: white; transform: rotate(-1deg); }
+        .price { font-weight: bold; color: #3fb950; display: block; margin-top: 5px; }
+        .warning-light { height: 10px; width: 10px; background-color: red; border-radius: 50%; display: inline-block; animation: blink 0.8s infinite; }
+        @keyframes blink { 0% { opacity: 1; } 50% { opacity: 0; } 100% { opacity: 1; } }
+        button { background: #238636; color: white; border: none; padding: 12px 25px; border-radius: 8px; cursor: pointer; font-size: 16px; margin-top: 20px; }
     </style>
 </head>
 <body>
 
 <div class="container">
-    <h1>🗳️ ভোট বাজার ডট কম</h1>
-    <p class="tagline">"আপনার মূল্যবান ইমান, আমাদের সেরা অফার!"</p>
-    <hr>
+    <div class="warning-light"></div> <span>সার্ভার স্ট্যাটাস: নজরদারিতে আছে</span>
+    <h1>🗳️ ভোট বাজার: ভিআইপি জোন</h1>
+    <p class="tagline">"গণতন্ত্রের এই বাজারে, আপনিই সেরা পণ্য!"</p>
 
-    <h3>আজকের রেট চার্ট (অফার সীমিত সময়ের জন্য)</h3>
-
-    <div class="price-card" onclick="buy('চা-শিঙাড়া')">
-        <h4>লোকাল পাতি নেতা প্যাকেজ</h4>
-        <p>১টি ভোট = ১ কাপ চা + ২টা গরম শিঙাড়া</p>
-        <p class="price">মূল্য: ৫ টাকা (ঘুষ ফ্রী)</p>
+    <div class="secret-card" onclick="secret('অন্ধকার')">
+        <h4>🌑 রাতের আধারে সিল মারা প্যাকেজ</h4>
+        <p>সকাল পর্যন্ত অপেক্ষা করার সময় নেই? রাতেই কাজ শেষ!</p>
+        <span class="price">বিনিময়: ১ প্যাকেট বিরিয়ানি + ১টি হাফ প্যান্ট</span>
     </div>
 
-    <div class="price-card" onclick="buy('বিরিয়ানি')">
-        <h4>বিলাসবহুল ভোটার প্যাকেজ</h4>
-        <p>১টি ভোট = ১ প্যাকেট ঠান্ডা কাচ্চি (আলু ছাড়া)</p>
-        <p class="price">মূল্য: ৫০০ টাকা</p>
+    <div class="secret-card" onclick="secret('বিদেশ')">
+        <h4>✈️ ওমরাহ/ভ্যাকেশন প্যাকেজ</h4>
+        <p>ভোট দিয়ে সরাসরি এয়ারপোর্ট! এলাকায় থাকার ঝামেলা নেই।</p>
+        <span class="price">বিনিময়: ওয়ান ওয়ে টিকিট (ফেরার গ্যারান্টি নাই)</span>
     </div>
 
-    <div class="price-card" onclick="buy('আইফোন')">
-        <h4>ভিআইপি দালাল প্যাকেজ</h4>
-        <p>১০টি ভোট = আইফোন ১৬ প্রো ম্যাক্স (বক্স ছাড়া)</p>
-        <p class="price">মূল্য: ২ লক্ষ টাকা + রিমান্ড গ্যারান্টি</p>
+    <div class="secret-card" onclick="secret('ডিজিটাল')">
+        <h4>🤖 অটো-ভোট বট (AI Powered)</h4>
+        <p>আপনি ঘুমাবেন, কিন্তু আপনার ভোটটা ঠিকই কাস্ট হয়ে যাবে।</p>
+        <span class="price">বিনিময়: আপনার ফেসবুক আইডির পাসওয়ার্ড</span>
     </div>
 
-    <div class="stats">
-        <p>আজকের মোট ডিল সম্পন্ন হয়েছে: <span id="counter">৪২০</span> টি</p>
-        <p>স্টকে ভোট বাকি আছে: <span id="stock">৭</span> টি</p>
-    </div>
+    <hr style="border: 0.5px solid #30363d;">
+    
+    <button onclick="checkNID()">আপনার ভোট চুরি হয়েছে কি না চেক করুন</button>
 
-    <br>
-    <button onclick="sell()">আপনার ভোট বিক্রি করতে এখানে ক্লিক করুন</button>
-
-    <footer>
-        * শর্ত প্রযোজ্য: ভোট দেওয়ার পর প্রার্থী এলাকা ছাড়লে কর্তৃপক্ষ দায়ী নয়। <br>
-        সতর্কতা: এটি একটি ফান প্রজেক্ট। সিরিয়াসলি নিয়ে আবার থানায় যাবেন না!
-    </footer>
+    <p style="font-size: 12px; margin-top: 20px; color: #f85149;">
+        *সতর্কবার্তা: এই সাইটে প্রবেশ করা মাত্রই আপনার লোকেশন ডিবি অফিসের বড় ভাইয়ের কাছে চলে গেছে। জাস্ট কিডিং!*
+    </p>
 </div>
 
 <script>
-    function buy(item) {
-        alert("অভিনন্দন! আপনি " + item + " এর বিনিময়ে আপনার ইমান বন্ধক রেখেছেন। অতি শীঘ্রই আপনার বাড়ির সামনে সাদা মাইক্রোবাস পাঠানো হবে।");
-        let count = document.getElementById('counter');
-        count.innerText = parseInt(count.innerText) + 1;
+    function secret(type) {
+        if(type === 'অন্ধকার') {
+            alert("সাবধান! ব্যালট বক্স অলরেডি ভরে গেছে। আপনি বরং একটু চা খেয়ে বাসায় যান।");
+        } else if(type === 'বিদেশ') {
+            alert("সরি! এই অফারটি শুধু বড় ভাইদের দালালের জন্য প্রযোজ্য। আপনি লাইন ধরুন।");
+        } else {
+            alert("সিস্টেম এরর! আপনার ইমান খুব শক্তিশালী, তাই হ্যাক করা যাচ্ছে না।");
+        }
     }
 
-    function sell() {
-        let name = prompt("আপনার নাম কি? (ভোট চুরির সুবিধার জন্য লাগবে)");
-        if(name) {
-            alert("ধন্যবাদ " + name + "! আপনার তথ্য ডার্ক ওয়েবে পাচার করা হয়েছে। আপনার এলাকার বড় ভাই শীঘ্রই আপনার সাথে যোগাযোগ করবে।");
+    function checkNID() {
+        let nid = prompt("আপনার ১০ ডিজিটের NID নাম্বার দিন (নিরাপদ থাকবে ইনশাআল্লাহ):");
+        if(nid) {
+            alert("দুঃখিত! এই NID দিয়ে অলরেডি ৩ বার ভোট দেওয়া হয়ে গেছে। আপনি অনেক লেট করে ফেলেছেন!");
         }
     }
 </script>
